--- a/_config.yml
+++ b/_config.yml
@@ -46,6 +46,7 @@ navbar-col: "#33117C"
 navbar-text-col: "#FFFFFF"
 navbar-children-col: "#F5F5F5"
 page-col: "#3C3C3C"
+text-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#F5F5F5"
