--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ navbar-text-col: "#FFFFFF"
 navbar-children-col: "#F5F5F5"
 page-col: "#3C3C3C"
 text-col: "#FFFFFF"
-link-col: "#008AFF"
+link-col: "#DF264B" #008AFF"
 hover-col: "#0085A1"
 footer-col: "#F5F5F5"
 footer-text-col: "#777777"
