--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ avatar: "/img/physics_portrait_re.jpg" #avatar-icon.png"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#33117C"
+navbar-col: "#264BDF" #"#33117C"
 navbar-text-col: "#FFFFFF"
 navbar-children-col: "#F5F5F5"
 page-col: "#3C3C3C"
