--- a/_config.yml
+++ b/_config.yml
@@ -49,8 +49,8 @@ page-col: "#3C3C3C"
 text-col: "#FFFFFF"
 link-col: "#DF264B" #008AFF"
 hover-col: "#0085A1"
-footer-col: "#F5F5F5"
-footer-text-col: "#777777"
+footer-col: "#264BDF" #"#F5F5F5"
+footer-text-col: "#FFFFFF" #"#777777"
 footer-link-col: "#404040"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
