--- a/_config.yml
+++ b/_config.yml
@@ -45,8 +45,8 @@ avatar: "/img/physics_portrait_re.jpg" #avatar-icon.png"
 navbar-col: "#264BDF" #"#33117C"
 navbar-text-col: "#FFFFFF"
 navbar-children-col: "#DC0824" #"#DF264B" #"#F5F5F5"
-page-col: "#FAF6F5" #"#3C3C3C"
-text-col: "#FFFFFF"
+page-col: "#FCF6EF" #"#FAF6F5" #"#3C3C3C"
+text-col: "#060201" #"#FFFFFF"
 link-col: "#DC0824" #"#DF264B" #008AFF"
 hover-col: "#0085A1"
 footer-col: "#264BDF" #"#F5F5F5"
