--- a/_config.yml
+++ b/_config.yml
@@ -42,22 +42,22 @@ avatar: "/img/physics_portrait_re.jpg" #avatar-icon.png"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#264BDF" #"#33117C"
+# navbar-col: "#264BDF" #"#33117C"
 navbar-text-col: "#FFFFFF"
 navbar-children-col: "#DC0824" #"#DF264B" #"#F5F5F5"
 page-col: "#FCF6EF" #"#FAF6F5" #"#3C3C3C"
 text-col: "#060201" #"#FFFFFF"
 link-col: "#DC0824" #"#DF264B" #008AFF"
 hover-col: "#0085A1"
-footer-col: "#264BDF" #"#F5F5F5"
+# footer-col: "#264BDF" #"#F5F5F5"
 footer-text-col: "#FFFFFF" #"#777777"
 footer-link-col: "#DC0824" #"#DF264B" #"#404040"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
 
-# navbar-img: "/img/bgimage.png"
-# footer-img: "/img/bgimage.png"
+navbar-img: "/img/bgimage.png"
+footer-img: "/img/bgimage.png"
 # page-img: "/img/bgimage.png"
 
 # --- Footer options --- #
