--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ avatar: "/img/physics_portrait_re.jpg" #avatar-icon.png"
 # navbar-col: "#264BDF" #"#33117C"
 navbar-text-col: "#FFFFFF"
 navbar-children-col: "#DC0824" #"#DF264B" #"#F5F5F5"
-page-col: "#FCF6EF" #"#FAF6F5" #"#3C3C3C"
+page-col: "#F9F9F9" #"#FAF6F5" #"#3C3C3C"
 text-col: "#060201" #"#FFFFFF"
 link-col: "#DC0824" #"#DF264B" #008AFF"
 hover-col: "#0085A1"
