--- a/_config.yml
+++ b/_config.yml
@@ -65,8 +65,7 @@ footer-img: "/img/hubble_esa_quintuplet_cluster.jpg"
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Katelyn Stringer
-
+  name: Some Person
 # Select your active Social Network Links.
 # Uncomment the links you want to show in the footer and add your information to each link.
 # You can reorder the items to define the link order.
