--- a/_config.yml
+++ b/_config.yml
@@ -23,12 +23,12 @@ description: My Personal Page (Work in Progress!)
 
 # List of links in the navigation bar
 navbar-links:
+  Home: "https://stringkm.github.io"
   About Me: "aboutme"
   Resources:
     - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
     - Learn markdown: "http://www.markdowntutorial.com/"
     - GitHub Pages: "https://pages.github.com/"
-  Author's home: "https://stringkm.github.io"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
