--- a/_config.yml
+++ b/_config.yml
@@ -47,8 +47,8 @@ navbar-text-col: "#FFFFFF"
 navbar-children-col: "#DC0824" #"#DF264B" #"#F5F5F5"
 page-col: "#F9F9F9" #"#FAF6F5" #"#3C3C3C"
 text-col: "#060201" #"#FFFFFF"
-link-col: "#9EDCFF" #"#DC0824" #"#DF264B" #008AFF"
-hover-col: "#0085A1"
+link-col: "#DC0824" #"#9EDCFF" #"#DC0824" #"#DF264B" #008AFF"
+hover-col: "#9EDCFF" #"#0085A1"
 # footer-col: "#264BDF" #"#F5F5F5"
 footer-text-col: "#FFFFFF" #"#777777"
 footer-link-col: "#DC0824" #"#DF264B" #"#404040"
