--- a/_config.yml
+++ b/_config.yml
@@ -71,8 +71,8 @@ author:
 # You can reorder the items to define the link order.
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
-  rss: false #true
-#  email: "someone@example.com"
+  #rss: false #true
+  email: "stringkm+wp@gmail.com"
 #  facebook: daattali
   github: stringkm
   twitter: katelovesdata
