Removed link to home

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: My Personal Page (Work in Progress!)
 
 # List of links in the navigation bar
 navbar-links:
-  Home: "https://stringkm.github.io"
+  #Home: "https://stringkm.github.io"
   About Me: "aboutme"
   Projects: "projects"
   ASTR 102: "astr102"
