added research tab

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ navbar-links:
   Home: "https://stringkm.github.io"
   #About Me: "aboutme"
   #Projects: "projects/index"
+  Research: "research"
   ASTR 102: "astr102"
   Resume: "resumecv"
   #Resources:
