removed "work in progress" from description

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ paginate_path: "/projects/page:num/"
 title: Katelyn Stringer
 
 # Short description of your site
-description: My Personal Page (Work in Progress!)
+description: Katelyn Stringer's Personal Page
 
 # --- Navigation bar options --- #
 
